--- a/lesson-17/css/style.css
+++ b/lesson-17/css/style.css
@@ -329,6 +329,7 @@ body {
 .item-prod__image {
     transition: all 0.3s ease;
     opacity: 0.85;
+    border-radius: 5px;
 }
 
 .item-prod__image:not(:last-child) {
@@ -339,7 +340,7 @@ body {
     border-radius: 5px;
     width: 100%;
     height: 100%;
-    object-fit: contain;
+    object-fit: cover;
     aspect-ratio: 271 / 270;
 }
 
