--- a/lesson-18/css/style.css
+++ b/lesson-18/css/style.css
@@ -12,6 +12,10 @@ body {
     background: #FEFAF4;
 }
 
+.menu-open body {
+    overflow: hidden;
+}
+
 [class*="__container"] {
     max-width: 1200px;
     margin: 0 auto;
@@ -36,6 +40,10 @@ body {
     font-weight: 700;
     background: #FEFBF7;
     width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 50;
 }
 
 .header__container {
@@ -106,7 +114,7 @@ body {
     opacity: 1;
     transform: translate(0px, -10px);
     visibility: visible;
-    pointer-events: all ;
+    pointer-events: all;
 }
 
 .menu__submenu {
@@ -169,6 +177,10 @@ body {
     line-height: 12px;
 }
 
+.header__icon-menu {
+    display: none;
+}
+
 /*-------------Header @media-----------------*/
 @media (any-hover: hover) {
     .list__item:hover .list__link {
@@ -199,10 +211,28 @@ body {
         width: 100%;
         height: 100%;
         top: 0;
-        left: 0;
+        left: -100%;
+        transition: left 0.3s;
         background-color: #e7ddd2;
         padding: 70px 15px 30px 15px;
         overflow: auto;
+    }
+
+    .menu__body::before {
+        content: '';
+        position: fixed;
+        width: 100%;
+        height: 50px;
+        top: 0;
+        left: 100%;
+        transition: left 0.3s;
+        z-index: 2;
+        background-color: #e7ddd2;
+    }
+
+    .menu-open .menu__body,
+    .menu-open .menu__body::before {
+        left: 0;
     }
 
     .menu__list {
@@ -246,19 +276,186 @@ body {
         display: none;
     }
 
-}
+    .list__item--arrow:hover .menu__submenu {
+        transform: translate(0, 0);
+    }
 
-@media (max-width: 440px) {
-    .header__logo {
-        font-size: 24px;
+    .header__icon-menu {
+        display: block;
+        width: 30px;
+        height: 18px;
+        flex: 0 0 30px;
+        position: relative;
+        z-index: 5;
+    }
+
+    .header__icon-menu::before,
+    .header__icon-menu::after,
+    .header__icon-menu span {
+        content: '';
+        height: 2px;
+        width: 100%;
+        position: absolute;
+        left: 0;
+        background-color: black;
+        transition: all 0.3s;
+    }
+
+    .header__icon-menu::before {
+        top: 0;
+    }
+
+    .header__icon-menu::after {
+        bottom: 0;
+    }
+
+    .header__icon-menu span {
+        top: 50%;
+        margin-top: -1px;
+    }
+
+    .menu-open .header__icon-menu span {
+        transform: scale(0);
+    }
+
+    .menu-open .header__icon-menu::before {
+        transform: rotate(-45deg);
+        top: 50%;
+        margin-top: -1px;
+    }
+
+    .menu-open .header__icon-menu::after {
+        transform: rotate(45deg);
+        bottom: 50%;
+        margin-bottom: -1px;
     }
 
 }
 
-/*------------Page.Jewellery block------------*/
-.page {
-    padding-top: 90px;
+@media (max-width: 440px) {
+    .header__container {
+        gap: 10px;
+    }
+
+    .header__logo {
+        font-size: 25px;
+    }
+
+    .header__action {
+        column-gap: 10px;
+    }
+
 }
+
+@media (max-width: 320.98px) {
+    .header__container {
+        gap: 5px;
+    }
+
+    .header__logo {
+        font-size: 22px;
+    }
+}
+
+/*------------Page.Hero block------------*/
+.page {
+    /*padding-top: 90px;*/
+    display: flex;
+    flex-direction: column;
+}
+
+.page__hero {
+    background-color: #502203;
+    padding: 200px 0 55px 0;
+    flex-grow: 1;
+    display: flex;
+    color: #FFF;
+}
+
+.hero__container {
+    flex: 1 1 auto;
+    display: flex;
+    /*gap: 30px;*/
+    /*align-items: center;*/
+    align-items: flex-start;
+}
+
+.hero__body {
+    flex-basis: 31.625%;
+    flex-shrink: 0;
+    padding-top: 57px;
+    padding-right: 30px;
+}
+
+.hero__body > * {
+    margin-bottom: 9px;
+}
+
+.hero__title {
+    font-size: 78px;
+    font-weight: 700;
+    line-height: 1.3;
+}
+
+/*.hero__title:not(:last-child) {*/
+/*    margin-bottom: 9px;*/
+/*}*/
+
+.hero__button {
+    padding: 15px 25px;
+    border-radius: 4px;
+    border: 1px solid #FFF;
+    font-size: 24px;
+    font-weight: 600;
+    box-shadow: -8px 12px 0 rgba(255, 255, 255, 0.06);
+}
+
+.hero__body > *:last-child {
+    margin-bottom: 0;
+}
+
+.hero__image {
+    overflow: hidden;
+    flex-basis: 36.75%; /* 430/1200px */
+    flex-shrink: 0;
+    border-radius: 215px;
+    border: 1px solid #FFF;
+    padding: 20px;
+    /*aspect-ratio: 390 / 554*/
+}
+
+.hero__image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    background-color: #502203;
+}
+
+.hero__content {
+    flex-basis: 31.625%;
+    flex-shrink: 0;
+    padding-top: 76px;
+    padding-left: 30px;
+}
+
+.content-hero__text {
+    font-size: 22px;
+    font-weight: 700;
+    line-height: 1.48;
+}
+
+.content-hero__item {
+    font-size: 32px;
+    font-weight: 600;
+}
+
+@media (max-width: 960px) {
+    .page__hero {
+        padding: 90px 0 40px 0;
+    }
+}
+
+
 
 
 
