--- a/lesson-18/css/style.css
+++ b/lesson-18/css/style.css
@@ -64,19 +64,10 @@ body {
     z-index: 10;
 }
 
-.header__menu {
-
-}
-
-.menu__body {
-
-}
-
 .menu__list {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    /*align-items: center;*/
     column-gap: 36px;
     row-gap: 10px;
 }
@@ -155,12 +146,15 @@ body {
 
 .action__item {
     flex: 0 0 32px;
+    width: 32px;
     position: relative;
     transition: transform 0.3s ease;
 }
 
 .action__item img {
     max-width: 100%;
+    height: 100%;
+
 }
 
 .action__item span {
@@ -268,7 +262,6 @@ body {
     }
 
     .list__item--arrow .list__link {
-        /*justify-content: flex-end;*/
         display: block;
     }
 
@@ -329,7 +322,6 @@ body {
         bottom: 50%;
         margin-bottom: -1px;
     }
-
 }
 
 @media (max-width: 440px) {
@@ -344,7 +336,6 @@ body {
     .header__action {
         column-gap: 10px;
     }
-
 }
 
 @media (max-width: 320.98px) {
@@ -359,7 +350,6 @@ body {
 
 /*------------Page.Hero block------------*/
 .page {
-    /*padding-top: 90px;*/
     display: flex;
     flex-direction: column;
 }
@@ -436,38 +426,6 @@ body {
     border-radius: 215px;
     border: 1px solid #FFF;
     padding: 20px;
-    /*aspect-ratio: 390 / 554*/
-}
-
-.body__image {
-    position: absolute;
-    bottom: 0;
-    left: 35px;
-    width: 239px;
-    height: 215px;
-    border: 1px solid #FFF;
-    border-radius: 195px 195px 0 0;
-    padding: 5px 6px;
-    overflow: hidden;
-}
-
-/*.body__image::before {*/
-/*    content: '';*/
-/*    width: 100%;*/
-/*    height: 100%;*/
-/*    position: absolute;*/
-/*    bottom: 5px;*/
-/*    right: 6px;*/
-/*    border-radius: 195px 195px 0px 0px;*/
-/*}*/
-
-.body__image img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    aspect-ratio: 239 / 215;
-    background-color: #502203;
-    border-radius: 195px 195px 0 0;
 }
 
 .hero__image img {
@@ -475,6 +433,7 @@ body {
     height: 100%;
     object-fit: cover;
     background-color: #502203;
+    aspect-ratio: 390 / 554
 }
 
 .content-hero {
@@ -519,7 +478,6 @@ body {
     .hero__button:active {
         background-color: rgba(255, 255, 255, 0.08);
     }
-
 }
 
 @media (max-width: 1405px) {
@@ -527,14 +485,12 @@ body {
     .decor__right {
         display: none;
     }
-
 }
 
 @media (max-width: 1200px) {
     .hero__title {
         font-size: 64px;
     }
-
 }
 
 @media (max-width: 991.98px) {
@@ -548,14 +504,14 @@ body {
         align-items: stretch;
     }
 
-    .hero__body {
+    .hero__body,
+    .hero__content {
         text-align: center;
     }
 
     .hero__image {
         align-self: center;
     }
-
 }
 
 @media (max-width: 960px) {
@@ -572,6 +528,10 @@ body {
     .hero__body {
         text-align: center;
     }
+
+    .content-hero__item {
+        font-size: 26px;
+    }
 }
 
 @media (max-width: 320.98px) {
@@ -587,6 +547,7 @@ body {
         font-size: 22px;
     }
 }
+
 /*------ Mobile first!-----*/
 @media (min-width: 992px) {
     .hero__body {
@@ -609,6 +570,29 @@ body {
 
     .content-hero__item {
         margin-bottom: 183px;
+    }
+}
+
+/*------------Footer---------------*/
+.footer {
+    border-top: 1px solid rgba(249, 249, 249, 0.22);
+    color: #FFF;
+    text-align: center;
+    font-size: 20px;
+    padding: 30px;
+    background: #482107;
+}
+
+@media (max-width: 767.98px) {
+    .footer {
+        padding: 15px 15px;
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 320px) {
+    .footer {
+        padding: 10px 10px;
     }
 }
 
