--- a/lesson-18/css/style-individ.css
+++ b/lesson-18/css/style-individ.css
@@ -111,7 +111,7 @@ body {
     position: absolute;
     top: 100%;
     left: 0;
-    padding-top: 38px;
+    padding-top: 50px;
     visibility: hidden;
     opacity: 0;
     transition: all 0.3s ease;
@@ -121,9 +121,9 @@ body {
 
 .submenu__list {
     width: 200px;
-    border-radius: 15px;
+    border-radius: 7px;
     padding: 15px;
-    background-color: #f6eee4;
+    background-color: rgba(246, 238, 228, 0.75);
 }
 
 .submenu__item:not(:last-child) {
