--- a/lesson-18/css/style.css
+++ b/lesson-18/css/style.css
@@ -112,7 +112,7 @@ body {
     position: absolute;
     top: 100%;
     left: 0;
-    padding-top: 38px;
+    padding-top: 47px;
     visibility: hidden;
     opacity: 0;
     transition: all 0.3s ease;
@@ -122,9 +122,9 @@ body {
 
 .submenu__list {
     width: 200px;
-    border-radius: 15px;
+    border-radius: 7px;
     padding: 15px;
-    background-color: #f6eee4;
+    background-color: rgba(246, 238, 228, 0.85);
 }
 
 .submenu__item:not(:last-child) {
