--- a/lesson-18/css/style.css
+++ b/lesson-18/css/style.css
@@ -454,20 +454,19 @@ body {
     font-size: 32px;
     font-weight: 600;
     padding-left: 10px;
-    padding-bottom: 50%;
     position: relative;
 }
 
-.content-hero__item::before {
-    content: '';
-    position: absolute;
-    top: 15%;
-    left: 0;
-    width: 1px;
-    height: 30.947368%;
-    transform: translate(0, -50%);
-    background-color: #FFF;
-}
+/*.content-hero__item::before {*/
+/*    content: '';*/
+/*    position: absolute;*/
+/*    top: 15%;*/
+/*    left: 0;*/
+/*    width: 1px;*/
+/*    height: 30.947368%;*/
+/*    transform: translate(0, -50%);*/
+/*    background-color: #FFF;*/
+/*}*/
 
 .side-content__left,
 .side-content__right {
@@ -626,7 +625,9 @@ body {
 
     .content-hero__item {
         align-self: flex-end;
+        padding-bottom: 50%;
     }
+
 }
 
 /*------------Footer---------------*/
